# rust-wallpaper

./: Cargo.toml  LICENSE  README.md
src/: main.rs  platform.rs
src/platform/: macos.rs  windows.rs
