[package]
name = "rust-wallpaper"
version = "0.1.0"
authors = ["Mikazuki <mikazuki_fuyuno@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(windows)'.dependencies]
com = { git = "https://github.com/microsoft/com-rs" }
winapi = { version = "0.3", features = ["wtypesbase"] }